# AS_2_static_libs

./: local.properties  readme.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/uner/ii/twostatic/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/uner/ii/twostatic/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/uner/ii/twostatic/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
s1/: build.gradle
s1/src/main/cpp/: CMakeLists.txt
s1/src/main/cpp/s1/: CMakeLists.txt
s1/src/main/cpp/s1/include/: s1.h
s1/src/main/cpp/s1/src/: s1.cpp
s2/: build.gradle
s2/src/main/cpp/: CMakeLists.txt
s2/src/main/cpp/s2/: CMakeLists.txt
s2/src/main/cpp/s2/include/: s2.h
s2/src/main/cpp/s2/src/: s2.cpp
